2002-07-20  Dan Espen  <dane@mk.telcordia.com>

	* index.html: More typos, add a little FVWM promo.

2002-07-20  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	disabled NEWS FLASH, corrected a typo in it

2002-07-19  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Screenshot from Remko Troncon.
	Screenshot from Christian Michon. 

2002-06-24  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	* download.html:
	* generated/AUTHORS.html:
	* generated/FAQ.html:
	* generated/NEWS.html:
	updated for 2.5.2

2002-06-12  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	* download.html:
	* generated/AUTHORS.html:
	* generated/FAQ.html:
	* generated/NEWS.html:
	updated for 2.4.8

	* cvs.html:
	improved "generated files" section

2002-05-26  Mikhael Goikhman  <migo@homemail.com>

	* links.html:
	updated description of Suzanne link;
	removed fvwm.themes.org link

2002-05-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* links.html:
	added a link to Suzanne Skinner's fvwm site

2002-05-24  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	take out "NEWS FLASH", add temporary status instead;
	once again split Mailing List Info and Mail Archive into 2 items
	so we have an even number of items

	* features.html:
	added missing features of 2.4.x and 2.5.x

2002-05-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	mark 2.5.1 as alpha quality

2002-04-26  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	* download.html:
	* generated/AUTHORS.html:
	* generated/FAQ.html:
	* generated/NEWS.html:
	updated for 2.5.1

2002-04-11  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	* download.html:
	* generated/AUTHORS.html:
	* generated/FAQ.html:
	* generated/NEWS.html:
	updated for 2.4.7

	* mod_f2m_communication.html:
	* screenshots/J_C_Lawrence.fvwm2rc:
	* screenshots/Tenebrae.fvwm2rc:
	* screenshots/index.html:
	handle fvwm2 executable (that was renamed to fvwm)

2002-03-31  Dominik Vogt  <dominik.vogt@gmx.de>
