@@ -437,8 +437,21 @@ Waiting impatiently for native PNG support.
 	      width=160 height=120 align=left></a></td>
 	<td>
 	  Submitted by Remko Troncon.
+Remko says:
+This screenshot shows a clean and simple desktop 
+<A HREF="http://www.cs.kuleuven.ac.be/~remko/fvwm/fvwm2rc">setup</A>. 
+On the top left
+is FvwmButtons which opens panels of apps I use frequently for a 
+very short time (like IM's). On the top right, 
+<A HREF="http://www.gkrellm.net">GKrellM</A> is showing
+all the things I like to monitor. The bottom right corner contains
+FvwmPager. The background is generated by 
+<A HREF="http://xplanet.sourceforge.net/">Xplanet</A>.
+The fonts show the anti-aliasing support of FVWM.
+The <A HREF="http://www.cs.kuleuven.ac.be/~remko/fvwm/icons.tgz">icons</A> 
+in the menus are mostly taken from the 
+<A HREF="http://wm-icons.sourceforge.net/">wm-icons</A> distribution.
  	</td></tr>
-
     </table>
     <hr>
     Created: June 13, 1999 ----- Last Updated: Sept 25, 2001.
