@@ -1,3 +1,7 @@
+2002-07-22  Dan Espen  <dane@mk.telcordia.com>
+
+	* screenshots/index.html: Comments for Remko's screenshot.
+
 2002-07-20  Dan Espen  <dane@mk.telcordia.com>
 
 	* index.html: More typos, add a little FVWM promo.
